--- a/contact.html
+++ b/contact.html
@@ -19,5 +19,8 @@
 		<a href="market-report.html">Market Report</a>
 		<a href="contact.html">Contact</a>
 		<a href="http://hud.gov" target="_blank">H.U.D.</a>
+
+		<h3>Contact</h3>
+		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3328.848776976056!2d-112.08885175391946!3d33.45324616987047!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1426439818424" width="425" height="350" frameborder="0" style="border:0"></iframe>
 	</body>
 </html>
