--- a/contact.html
+++ b/contact.html
@@ -22,5 +22,20 @@
 
 		<h3>Contact</h3>
 		<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d3328.848776976056!2d-112.08885175391946!3d33.45324616987047!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sus!4v1426439818424" width="425" height="350" frameborder="0" style="border:0"></iframe>
+
+		<form action="#" method="post">
+			<label for="fullname">Name</label>
+			<input type="text" id="fullname" name="fullname" placeholder="your name" required>
+			<label for="email">Email</label>
+			<input type="email" id="email" name="email" placeholder="your email" required>
+			<label for="phone">Phone Number</label>
+			<input type="tel" id="phone" name="phone" placeholder="your phone number (optional)">
+			<label id="message">Message</label>
+			<textarea id="message" name="message" rows="10"></textarea>
+			<input type="submit" value="send">
+
+		</form>
+		<br>
+		<br>
 	</body>
 </html>
