add semantic containers

--- a/index.html
+++ b/index.html
@@ -9,25 +9,40 @@
 		<title>Luxury Realty - About</title>
 	</head>
 	<body>
-		<!-- The body is the viewable area, bruh. e.g., I'ma throw down some text, links images, and media, man. -->
-		<h1>Luxury</h1>
-		<h2>Realty</h2>
+		<header>
+			<h1>Luxury</h1>
+			<h2>Realty</h2>
 
-		<a href="index.html">About</a>
-		<a href="new-properties.html">New Properties</a>
-		<a href="real-estate-listings.html">Listings</a>
-		<a href="market-report.html">Market Report</a>
-		<a href="contact.html">Contact</a>
-		<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		<nav>
+			<a href="index.html">About</a>
+			<a href="new-properties.html">New Properties</a>
+			<a href="real-estate-listings.html">Listings</a>
+			<a href="market-report.html">Market Report</a>
+			<a href="contact.html">Contact</a>
+			<a href="http://hud.gov" target="_blank">H.U.D.</a>
+		</nav>
+		</header>
 
-		<img src="images/intro-pic.jpg" alt="A stunning living room" title="Welcome to Luxury Realty">
+		<section id="featured-property">
+			<figure>
+				<img src="images/intro-pic.jpg" alt="A stunning living room" title="Welcome to Luxury Realty">
+				<figcaption>This photo was hijacked from my HTML coach</figcaption>
+			</figure>
 
-		<!--
-		using a foldername does not require slashes. This makes sense as the command line works almost the same way. ../ will move up one folder, correct? Cool.
-		-->
+			<!--
+			using a foldername does not require slashes. This makes sense as the command line works almost the same way. ../ will move up one folder, correct? Cool.
+			-->
 
-		<p>We're all about hello world, huh.</p> 
+			<p>We're all about hello world, huh.</p> 
 
-		<p>So, hello world, a'ight?</p>
+			<p>So, hello world, a'ight?</p>
+		</section>
+		<section id="promotional">
+			<!--If I had done the video code -along, it would go here.-->
+		</section>
+
+		<footer>
+			
+		</footer>
 	</body>
 </html>
