--- a/new-properties.html
+++ b/new-properties.html
@@ -7,6 +7,9 @@
 		-->
 		<meta charset="UTF-8">
 		<title>Luxury Realty - New Properties</title>
+		<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+		<link rel="stylesheet"  href="css/style.css">
+		<script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	</head>
 	<body>
 		<!-- The body is the viewable area, bruh. e.g., I'ma throw down some text, links images, and media, man. -->
