--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		-->
 		<meta charset="UTF-8">
 		<title>Luxury Realty - About</title>
+		<link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css">
+		<link rel="stylesheet" href="css/style.css">
+		<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
 	</head>
 	<body>
 		<header>
